# horse_pricing_model

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
data/delta/horse-prices/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc
data/delta/horse-prices/race_type=A%2FW/course=Chelmsford City/: .part-00003-a354638f-2451-47ea-b474-5c3e4e9a0226.c000.snappy.parquet.crc  part-00003-a354638f-2451-47ea-b474-5c3e4e9a0226.c000.snappy.parquet
data/delta/horse-prices/race_type=A%2FW/course=Dundalk/: .part-00004-b4a768e6-7048-46b4-9005-c426b74d882c.c000.snappy.parquet.crc  part-00004-b4a768e6-7048-46b4-9005-c426b74d882c.c000.snappy.parquet
data/delta/horse-prices/race_type=A%2FW/course=Kempton/: .part-00005-95309c24-56f3-46f5-9c56-79e0d8e50524.c000.snappy.parquet.crc  part-00005-95309c24-56f3-46f5-9c56-79e0d8e50524.c000.snappy.parquet
data/delta/horse-prices/race_type=A%2FW/course=Laytown/: .part-00001-0d906065-f267-487b-86a3-3ada75d1b46b.c000.snappy.parquet.crc  part-00001-0d906065-f267-487b-86a3-3ada75d1b46b.c000.snappy.parquet
data/delta/horse-prices/race_type=A%2FW/course=Lingfield/: .part-00007-782c5406-adce-480c-b22c-3aa51403a36a.c000.snappy.parquet.crc  part-00007-782c5406-adce-480c-b22c-3aa51403a36a.c000.snappy.parquet
notebooks/: eda.ipynb  feature_selection.ipynb  model_dev.ipynb
src/betfair/: morning_prices.py
src/transformations/: data_cleaning.py  functions.py
src/warehouse/: create_delta_table.py  spark.py
tests/: test_smoke.py
(+110 files in other folders)
