[project]
name = "horse-pricing-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "jupyter>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
